[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mozdbt"
authors = [
  { name="Mozilla Corporation", email="fx-data-dev@mozilla.org" },
]
description = "Mozilla's dbt project"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}

